use create-test-promise

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Bryan English <bryan@bryanenglish.com>",
   "license": "MIT",
   "dependencies": {
+    "create-test-promise": "^1.0.0",
     "make-tap-output": "^1.0.0",
     "tage": "^1.0.0"
   },
