--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pitesti",
   "version": "2.1.0",
-  "description": "A super-simple test framework for promises *only*.",
+  "description": "A super-simple test framework.",
   "main": "index.js",
   "scripts": {
     "posttest": "standard",
@@ -10,7 +10,7 @@
   "author": "Bryan English <bryan@bryanenglish.com>",
   "license": "MIT",
   "dependencies": {
-    "create-test-promise": "^1.0.0",
+    "create-test-promise": "^1.1.0",
     "make-tap-output": "^1.0.0",
     "tage": "^1.0.0"
   },
