--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "scripts": {
     "posttest": "semistandard",
-    "test": "node test"
+    "test": "imhotap test/test*.js"
   },
   "author": "Bryan English <bryan@bryanenglish.com>",
   "license": "MIT",
   "dependencies": {
     "create-test-promise": "^2.0.0",
+    "imhotap": "^2.0.0",
     "make-tap-output": "^2.0.0",
     "tage": "^1.0.0"
   },
